--- a/media-service/.env
+++ b/media-service/.env
@@ -1,7 +1,12 @@
-PORT = 3003
-MONGODB_URI = mongodb+srv://mahbubsprint310:sprint3100@identity.wq5g9ja.mongodb.net/
-JWT_SECRET = JWT_SECRET
-NODE_ENV = development
-cloud_name = dw0gdcwbl
-api_key = 942578838836722
-api_secret = FBShR1jzv08u88w9Gqmk40Zuq6s
+PORT=3003
+#MONGODB_URI = mongodb+srv://mahbubsprint310:sprint3100@identity.wq5g9ja.mongodb.net/
+JWT_SECRET=JWT_SECRET
+NODE_ENV=development
+cloud_name=dw0gdcwbl
+api_key=942578838836722
+api_secret=FBShR1jzv08u88w9Gqmk40Zuq6s
+#REDIS_URL = redis://localhost:6379
+MONGODB_URI=mongodb://mongo:27017/social-media-microservice
+REDIS_URL=redis://172.17.0.1:6379
+#RABBITMQ_URL=amqp://localhost:5672
+RABBITMQ_URL=amqp://admin:admin1234@172.17.0.1:5672
