--- a/post-service/.env
+++ b/post-service/.env
@@ -1,6 +1,9 @@
-PORT = 3002
-MONGODB_URI = mongodb+srv://mahbubsprint310:sprint3100@identity.wq5g9ja.mongodb.net/
-JWT_SECRET = JWT_SECRET
-NODE_ENV = development
-REDIS_URL = redis://localhost:6379
-RABBITMQ_URL = amqp://localhost:5672
+PORT=3002
+#MONGODB_URI = mongodb+srv://mahbubsprint310:sprint3100@identity.wq5g9ja.mongodb.net/
+JWT_SECRET=JWT_SECRET
+NODE_ENV=development
+#REDIS_URL = redis://localhost:6379
+MONGODB_URI=mongodb://mongo:27017/social-media-microservice
+REDIS_URL=redis://172.17.0.1:6379
+#RABBITMQ_URL=amqp://localhost:5672
+RABBITMQ_URL=amqp://admin:admin1234@172.17.0.1:5672
