--- a/identity-service/.env
+++ b/identity-service/.env
@@ -1,7 +1,7 @@
 PORT=3001
 #MONGODB_URI = mongodb+srv://mahbubsprint310:sprint3100@identity.wq5g9ja.mongodb.net/
 #MONGODB_URI=mongodb://localhost:27017/social-media-microservice
-MONGODB_URI=mongodb://root:root123r@mongo:27017/social-media-microservice
+MONGODB_URI=mongodb://root:root1234@mongodb:27017
 #REDIS_URL=redis://172.17.0.1:6379
 REDIS_URL=redis://:admin1234@redis:6379
 JWT_SECRET=JWT_SECRET
