--- a/search-service/.env
+++ b/search-service/.env
@@ -5,6 +5,6 @@ NODE_ENV=development
 #REDIS_URL = redis://localhost:6379
 #RABBITMQ_URL = amqp://localhost:5672
 MONGODB_URI=mongodb://mongo:27017/social-media-microservice
-REDIS_URL=redis://172.17.0.1:6379
+REDIS_URL=redis://:admin1234@redis:6379
 #RABBITMQ_URL=amqp://localhost:5672
-RABBITMQ_URL=amqp://admin:admin1234@172.17.0.1:5672
+RABBITMQ_URL=amqp://admin:admin1234@rabbitmq:5672
