--- a/search-service/.env
+++ b/search-service/.env
@@ -4,7 +4,7 @@ JWT_SECRET=JWT_SECRET
 NODE_ENV=development
 #REDIS_URL = redis://localhost:6379
 #RABBITMQ_URL = amqp://localhost:5672
-MONGODB_URI=mongodb://mongo:27017/social-media-microservice
+MONGODB_URI=mongodb://root:root1234@mongodb:27017
 REDIS_URL=redis://:admin1234@redis:6379
 #RABBITMQ_URL=amqp://localhost:5672
 RABBITMQ_URL=amqp://admin:admin1234@rabbitmq:5672
